--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"prop-types": "^15.6.0",
 		"react": "16.0.0-beta.5",
+		"react-google-signin": "^1.0.1",
 		"react-native": "0.49.3",
 		"react-native-firebase": "^3.0.4",
 		"react-native-google-signin": "^0.12.0",
