--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile "com.google.firebase:firebase-analytics:11.4.2"
     compile "com.google.firebase:firebase-auth:11.4.2"
+    compile "com.google.android.gms:play-services-auth:11.4.2"
 }
 
 // Run this once to be able to run the application with BUCK
